@@ -19,7 +19,7 @@ use DateTime::Format::Mail;
 use Devel::PartialDump;
 use File::Basename qw( basename );
 use File::LibMagic;
-use File::Slurp::Tiny qw( read_file );
+use File::Slurper qw( read_binary );
 use List::AllUtils qw( first );
 use Params::ValidationCompiler qw( validation_for );
 use Scalar::Util qw( blessed reftype );
@@ -346,7 +346,7 @@ my $flm = File::LibMagic->new;
         my $ct
             = _content_type( $mime_type // $flm->checktype_filename($file) );
 
-        my $content = read_file($file);
+        my $content = read_binary($file);
 
         return Courriel::Part::Single->new(
             headers      => _attachment_headers($content_id),
