@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Replaced File::Slurp::Tiny with File::Slurper. The former has been
+  deprecated by its author for some time. Fixes GH #9. Reported by Greg
+  Oschwald.
+
+
 0.47     2018-05-20
 
 - Switched to using GitHub for issue tracking.
